--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <h1>ALARM CLOCK</h1>
     <div id="center">
         <div>
         <button id="setAlarm" onclick="setAlarmTime()">Set Alarm Time</button>
         <input type="time" name="alarmTimeSelect" id="alarmTimeSelect" value="00:00">
-        <button id="snoozAlrm" onclick="snooze()">Snooze Alarm</button>
+        <button id="snoozeAlarm" onclick="snooze()">Snooze Alarm</button>
         </div>
         <div>
         <span id="alarm">Alarm not set</span>
